Updated styles for notifications / users / sprite and horizontal scroll bug.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,8 @@ body {background: image-url("favicon.png") top center repeat;}
 
 #header h1 span {font-weight: normal;}
 
+
+
 table {width: 100%; margin-bottom: 2em;}
 
 .row {border: none;}
@@ -71,9 +73,9 @@ input[type="text"]:focus, input[type="text"]:active {border-color: #0C2237; }
 
 h1 {font-family: "Century Gothic", "Helvetica Neue", Helvetica, Arial, sans-serif;}
 
-h2, h3, h4, h5, h6, input {font-family: 'GoudyBookLetter', Georgia, 'Times New Roman', serif; font-weight: normal; text-shadow: 0 1px 0 rgba(255,255,255,.9);}
+h2, h3, h4, h5, h6 {font-family: 'GoudyBookLetter', Georgia, 'Times New Roman', serif; font-weight: normal; text-shadow: 0 1px 0 rgba(255,255,255,.9);}
 
-.dashboard h2 {text-shadow: 0 1px 0 rgba(255,255,255,.9);}
+.dashboard h2 {text-shadow: 0 1px 0 rgba(255,255,255,.9); line-height: 1.1em;}
 
 h1 {color: #112137; text-shadow: 0 1px 0 rgba(255,255,255,.9); font-weight: normal; margin-top: .5em;}
 
@@ -129,7 +131,9 @@ a.button:visited {color: #fff;}
 
 #wrap .button {padding: .35em 1em;}
 
-.button.positive, a.button.positive, .button {
+#wrap .align-right a.button {padding: .35em 0; margin: 0;}
+
+.button.positive, a.button.positive{
   background: #112137; 
   color: #fff; 
   text-shadow: 0 -1px 0 rgba(0,0,0,.7); 
@@ -159,7 +163,6 @@ a.button:visited {color: #fff;}
 #wrap .button.negative {
   background: #CFA473;
   color: #333; 
-  text-shadow: 0 1px 0 rgba(255,255,255,.8); 
   border: none;
   text-transform: none;
   letter-spacing: none;
@@ -186,10 +189,12 @@ a.button:visited {color: #fff;}
 }
 
 #wrap .button.secondary {
-  background: #20703E;
+  background: #777;
   color: #fff;
+  font-weight: bold;
   border: none;
   padding: .75em;
+  font-size: .9em;
 }
 
 .button.secondary:hover,
@@ -218,9 +223,7 @@ fieldset li, form li {
   display: block;
 }
 
-fieldset li:last-child, form li:last-child {
-  border-bottom: none;
-}
+fieldset li:last-child, form li:last-child {border-bottom: none;}
 
 .panel {background: #fff; background: rgba(255,255,255,.85); padding: .5em 1em;}
 
@@ -240,13 +243,22 @@ fieldset li:last-child, form li:last-child {
   border-bottom: none;
 }
 
+ul.meta-list {margin: .5em 0 1.25em 0; font-size: .85em; padding: 1em 0 0 0; border-bottom: 1px solid rgba(0,0,0,.1); border-top: 1px solid rgba(0,0,0,.1);}
+
+ul.meta-list li {
+  list-style: none;
+  padding:0;
+  line-height: 1.1em;
+  display: block;
+}
+
+
 .panel h1, 
 .panel h2, 
 .panel h3, 
 .panel h4, 
 .panel h5, 
-.panel h6
-{color: #1A6485; font-weight: normal; padding-bottom: 0; margin-bottom: 0;}
+.panel h6 {color: #1A6485; font-weight: normal; padding-bottom: 0; margin-bottom: 0;}
 
 .discovery-bar {
   border-top: 2px solid rgba(0,0,0,.3);
@@ -274,6 +286,25 @@ fieldset li:last-child, form li:last-child {
 .nav-bar li:hover, .nav-bar li:active {background: #eee;}
 
 .nav-bar li {width: 25%; display: inline-block;}
+
+ul.side-nav {margin: 0; padding: 0;}
+
+ul.side-nav li {
+  border-bottom: 1px solid rgba(0,0,0,.07);
+  margin: 0;
+  padding: 0;
+}
+
+ul.side-nav li:last-child {border-bottom: none;}
+
+ul.side-nav li a {
+  background: none;
+  padding: .5em 0;
+  margin: 0;
+}
+
+ul.side-nav li a:hover,
+ul.side-nav li a:active {background: rgba(0,0,0,.03);}
 
 .nav-bar li.mygov a,
 .nav-bar li.notifications a span.notification-label,
@@ -311,6 +342,7 @@ span.jujitsu {
 .nav-bar li.notifications a {background: image-url("sprite.png") 55% -109px no-repeat; border-left:none;}
 .nav-bar li.profile a {background:  image-url("sprite.png") 55% -229px no-repeat; border-left: 1px solid #eee;}
 .nav-bar li.sign-out a {background: image-url("sprite.png") 55% -350px no-repeat;}
+
 
 
 @media only screen and (min-width: 768px) {
@@ -539,3 +571,5 @@ form li.full:last-child {border-bottom: none;}
 
 
 }
+
+.row {overflow: hidden; min-width: inherit;}
